# agentic-rag-financial

./: .dockerignore  .env.example  .gitignore  AGENT_BUILD_PROMPT.md  Dockerfile  GUIDE.md  INTERVIEW_DEEP_DIVE.md  MINIKUBE.md  README.md  UPWORK_PORTFOLIO.md  agentic_rag_walkthrough.ipynb  config.k8s.yaml  config.lite.yaml  config.yaml  docker-compose.yml  pyproject.toml
data/: eval_set.sample.jsonl
docs/: ARCHITECTURE.md  MINIKUBE.md
k8s/: deployment.yaml
scripts/: ask.py  deploy_hf.py  download_filings.py  ingest.py  run_eval.py
src/agentic_rag/: agent.py  api.py  chunking.py  config.py  embeddings.py  ingest.py  memory.py  retrieval.py  stores.py
tests/: test_pipeline.py
web/: index.html
